Fixed overflowing code blocks

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -230,6 +230,7 @@ section {
 
 main {
     flex-basis: 70%;
+    overflow: hidden;
 }
 
 aside {
